<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2017 Google Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.instant.analytics.MainActivity">

    <TextView android:id="@+id/instant_status_text"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/txt_not_initialized"
              android:layout_margin="16dp"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="4"
        android:orientation="horizontal"
        android:layout_margin="16dp">

        <TextView
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="start"
            android:gravity="center"
            android:text="@string/lbl_order_number" />

        <EditText
            android:id="@+id/txtbx_order_number"
            android:layout_width="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="0"
            android:inputType="number" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="start"
            android:gravity="center"
            android:text="@string/lbl_order_amount" />

        <EditText
            android:id="@+id/txtbx_order_amount"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:inputType="numberDecimal"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="start"
            android:gravity="center"
            android:text="@string/lbl_currency" />

        <EditText
            android:id="@+id/txtbx_currency"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:inputType="text"/>

    </GridLayout>

    <Button android:id="@+id/btn_send_ecommerce_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_send_ecommerce_event"
            android:layout_margin="16dp"/>

</LinearLayout>
